@@ -31,7 +31,7 @@ static unsigned char lcd_max_col = 0;
 static char sensor_client_fifo[MAX_LEN_FIFO_NAME];
 static int sensor_fd = -1;
 
-static int values[VAL_MAX_LEN];
+static char values[VAL_MAX_LEN];
 
 extern char *__progname;
 
@@ -156,36 +156,36 @@ void * lcd_handling(void *arg)
 
 	for (;;) {
 		req.line = 1;
-		snprintf(req.str, lcd_max_col, "Ext. Temp: %d", values[EXT_TEMP]);
+		strncpy(req.str, &values[EXT_TEMP], lcd_max_col);
 		LCD_WRITE_2();
 		memset(&req, 0, len);
 
 		req.line = 2;
-		snprintf(req.str, lcd_max_col, "Pressure: %d", values[PRESSURE]);
+		strncpy(req.str, &values[PRESSURE], lcd_max_col);
 		LCD_WRITE_2();
 		memset(&req, 0, len);
 
 		req.line = 3;
-		snprintf(req.str, lcd_max_col, "Brightness: %d", values[BRIGHTNESS]);
+		strncpy(req.str, &values[BRIGHTNESS], lcd_max_col);
 		LCD_WRITE_2();
 		memset(&req, 0, len);
 
 		req.line = 4;
-		snprintf(req.str, lcd_max_col, "Huminity: %d", values[HUMINITY]);
+		strncpy(req.str, &values[HUMINITY], lcd_max_col);
 		LCD_WRITE_2();
 		memset(&req, 0, len);
 
 		sleep(10);
 
 		req.line = 1;
-		snprintf(req.str, lcd_max_col, "Onboard Temp: %d", values[ONBOARD_TEMP]);
+		strncpy(req.str, &values[ONBOARD_TEMP], lcd_max_col);
 		LCD_WRITE_2();
 		memset(&req, 0, len);
 
 		sleep(10);
 
 		req.line = 1;
-		snprintf(req.str, lcd_max_col, "Baro Temp: %d", values[BARO_TEMP]);
+		strncpy(req.str, &values[BARO_TEMP], lcd_max_col);
 		LCD_WRITE_2();
 		memset(&req, 0, len);
 
@@ -215,12 +215,19 @@ void * ambient_handling(void *arg)
 			continue;
  		}
 
-		values[EXT_TEMP] = data.ext_temp;
-		values[ONBOARD_TEMP] = data.onboard_temp;
-		values[BARO_TEMP] = data.baro_temp;
-		values[HUMINITY] = data.huminity;
-		values[BRIGHTNESS] = data.brightness;
-		values[PRESSURE] = data.pressure;
+		snprintf(&values[EXT_TEMP], lcd_max_col, "Ext. Temp: %d",
+			data.ext_temp);
+		snprintf(&values[BARO_TEMP], lcd_max_col, "Baro Temp: %d",
+			data.baro_temp);
+		snprintf(&values[ONBOARD_TEMP], lcd_max_col, "Onboard Temp: %d",
+			data.onboard_temp);
+		snprintf(&values[PRESSURE], lcd_max_col, "Pressure: %d",
+			data.pressure);
+		snprintf(&values[BRIGHTNESS], lcd_max_col, "Brightness: %d",
+			data.brightness);
+		snprintf(&values[HUMINITY], lcd_max_col, "Huminity: %d",
+			data.huminity);
+
 		values[BODY_DETECT] = data.body_detect;
 #ifdef __DEBUG__
 		printf("external temp: %d\n", data.ext_temp);
